--- a/sky-server/pom.xml
+++ b/sky-server/pom.xml
@@ -18,6 +18,7 @@
         </dependency>
 
         <dependency>
+<!--            chenggongjianyujisuanjindaoxianzai-->
             <groupId>com.sky</groupId>
             <artifactId>sky-pojo</artifactId>
             <version>1.0-SNAPSHOT</version>
